feat: 生成article接口文档
